5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1735_2518.log
== TEST (2019-05-17 19:48:17) 
-- CODE:
n=20
print(n//2)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 17:22:21) 
-- CODE:
n = int(input("insira o number: "))
while (n != 1):
	if (n%2 == 0):
		a = n//2
	else:
		a = n * 3 + 1
	print(a)
-- OUTPUT:
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 17:24:17) 
-- CODE:
n = int(input("insira o number: "))
while (n != 1):
	if (n%2 == 0):
		a = n//2
	else:
		a = (n * 3) + 1
	print(a)
-- OUTPUT:
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 17:24:36) 
-- CODE:
n = int(input("insira o number: "))
while (n != 1):
	if (n%2 == 0):
		n = n//2
	else:
		n = (n * 3) + 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 17:24:46) 
-- CODE:
n = int(input("insira o number: "))
while (n != 1):
	if (n%2 == 0):
		n = n//2
	else:
		n = (n * 3) + 1
	print(n)
-- OUTPUT:
5
16
8
4
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 17:25:09) 
-- CODE:
n = int(input("insira o number: "))
while (n != 1):
	if (n%2 == 0):
		n = n//2
	else:
		n = (n * 3) + 1
	print(n)
-- EXECUTION TIME:
0.202736
-- TEST CASE 1:
---- input:
10 
---- correct output:
5
16
8
4
2
1
---- user output:
insira o number: 5
16
8
4
2
1
-- TEST CASE 2:
---- input:
45
---- correct output:
136
68
34
17
52
26
13
40
20
10
5
16
8
4
2
1
---- user output:
insira o number: 136
68
34
17
52
26
13
40
20
10
5
16
8
4
2
1
-- TEST CASE 3:
---- input:
13
---- correct output:
40
20
10
5
16
8
4
2
1
---- user output:
insira o number: 40
20
10
5
16
8
4
2
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 17:25:42) 
-- CODE:
n = int(input("insira o number: "))

while (n != 1):
	if (n%2 == 0):
		n = n//2
	else:
		n = (n * 3) + 1
	print(n)
-- EXECUTION TIME:
0.196587
-- TEST CASE 1:
---- input:
10 
---- correct output:
5
16
8
4
2
1
---- user output:
5
16
8
4
2
1
-- TEST CASE 2:
---- input:
45
---- correct output:
136
68
34
17
52
26
13
40
20
10
5
16
8
4
2
1
---- user output:
136
68
34
17
52
26
13
40
20
10
5
16
8
4
2
1
-- TEST CASE 3:
---- input:
13
---- correct output:
40
20
10
5
16
8
4
2
1
---- user output:
40
20
10
5
16
8
4
2
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 17:25:47) 
-- CODE:
n = int(input("insira o number: "))
while (n != 1):
	if (n%2 == 0):
		n = n//2
	else:
		n = (n * 3) + 1
	print(n)
-- EXECUTION TIME:
0.127954
-- TEST CASE 1:
---- input:
10 
---- correct output:
5
16
8
4
2
1
---- user output:
5
16
8
4
2
1
-- TEST CASE 2:
---- input:
45
---- correct output:
136
68
34
17
52
26
13
40
20
10
5
16
8
4
2
1
---- user output:
136
68
34
17
52
26
13
40
20
10
5
16
8
4
2
1
-- TEST CASE 3:
---- input:
13
---- correct output:
40
20
10
5
16
8
4
2
1
---- user output:
40
20
10
5
16
8
4
2
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 17:25:49) 
-- CODE:
n = int(input("insira o number: "))
while (n != 1):
	if (n%2 == 0):
		n = n//2
	else:
		n = (n * 3) + 1
	print(n)
-- EXECUTION TIME:
0.226336
-- TEST CASE 1:
---- input:
10 
---- correct output:
5
16
8
4
2
1
---- user output:
5
16
8
4
2
1
-- TEST CASE 2:
---- input:
45
---- correct output:
136
68
34
17
52
26
13
40
20
10
5
16
8
4
2
1
---- user output:
5
16
8
4
2
1
-- TEST CASE 3:
---- input:
13
---- correct output:
40
20
10
5
16
8
4
2
1
---- user output:
insira o number: 40
20
10
5
16
8
4
2
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 17:25:49) 
-- CODE:
n = int(input("insira o number: "))
while (n != 1):
	if (n%2 == 0):
		n = n//2
	else:
		n = (n * 3) + 1
	print(n)
-- EXECUTION TIME:
0.123428
-- TEST CASE 1:
---- input:
10 
---- correct output:
5
16
8
4
2
1
---- user output:
5
16
8
4
2
1
-- TEST CASE 2:
---- input:
45
---- correct output:
136
68
34
17
52
26
13
40
20
10
5
16
8
4
2
1
---- user output:
5
16
8
4
2
1
-- TEST CASE 3:
---- input:
13
---- correct output:
40
20
10
5
16
8
4
2
1
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 17:25:49) 
-- CODE:
n = int(input("insira o number: "))
while (n != 1):
	if (n%2 == 0):
		n = n//2
	else:
		n = (n * 3) + 1
	print(n)
-- EXECUTION TIME:
0.278218
-- TEST CASE 1:
---- input:
10 
---- correct output:
5
16
8
4
2
1
---- user output:
40
20
10
5
16
8
4
2
1
-- TEST CASE 2:
---- input:
45
---- correct output:
136
68
34
17
52
26
13
40
20
10
5
16
8
4
2
1
---- user output:

-- TEST CASE 3:
---- input:
13
---- correct output:
40
20
10
5
16
8
4
2
1
---- user output:
insira o number: 40
20
10
5
16
8
4
2
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 17:25:56) 
-- CODE:
n = int(input("insira o number: "))
while (n != 1):
	if (n%2 == 0):
		n = n//2
	else:
		n = (n * 3) + 1
	print(n)
-- OUTPUT:
5
16
8
4
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 17:25:58) 
-- CODE:
n = int(input("insira o number: "))
while (n != 1):
	if (n%2 == 0):
		n = n//2
	else:
		n = (n * 3) + 1
	print(n)
-- EXECUTION TIME:
0.178696
-- TEST CASE 1:
---- input:
10 
---- correct output:
5
16
8
4
2
1
---- user output:
5
16
8
4
2
1
-- TEST CASE 2:
---- input:
45
---- correct output:
136
68
34
17
52
26
13
40
20
10
5
16
8
4
2
1
---- user output:
136
68
34
17
52
26
13
40
20
10
5
16
8
4
2
1
-- TEST CASE 3:
---- input:
13
---- correct output:
40
20
10
5
16
8
4
2
1
---- user output:
40
20
10
5
16
8
4
2
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
